# LightZone

./: .appveyor.yml  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .travis.yml  .travis.yml.macosx  BUILD.md  CHANGELOG.md  CNAME  GNUmakefile  README.md  Splash.xcf  _config.yml  build.gradle.kts  dcraw.c  dcraw_lz.c  index.html  params.json  release-please-config.json  series  settings.gradle.kts
.pc/: applied-patches
buildSrc/: build.gradle.kts  settings.gradle.kts
debian/: changelog  control  copyright  dirs  install  lightzone-Debian_11.dsc  lightzone-Debian_12.dsc  lightzone.desktop  lightzone.dsc  lightzone.install  lightzone.menu  postinst  rules  watch
lightcrafts/: build.gradle.kts  build.xml  ivy.xml  ivysettings.xml  version.txt
lightcrafts/coprocesses/dcraw/: GNUmakefile  README.md  dcraw.c  dcraw.patch  dcraw_lz.c  dcraw_lz.sln  dcraw_lz.vcxproj  fuji_compressed.h  meson.build  series
lightcrafts/coprocesses/dcraw/.pc/: applied-patches
lightcrafts/coprocesses/dcraw/patches/: MSVC.patch  Sony-DSC-RX1RM2.patch  dcraw_indi.patch  fuji-firmware4  fuji_compressed  incompatible_pointer.patch  lightzone.patch  remove_restricted  strnlen  strnlen.patch  xtrans_yama1968.patch
lightcrafts/coprocesses/forkdaemon/: GNUmakefile  forkdaemon.cpp  meson.build
lightcrafts/jnisrc/RawlerJNI/: Cargo.toml
lightcrafts/jnisrc/RawlerJNI/src/: lib.rs  lightzone.rs
lightcrafts/jnisrc/tiff/: GNUmakefile  JNI_OnLoad.cpp  LC_TIFFCommon.h  LC_TIFFCommonJNI.cpp  LC_TIFFReaderJNI.cpp  LC_TIFFWriterJNI.cpp  configure.in  lctiff.mk  tiffcp.c  util.h
lightcrafts/jnisrc/tiff/libtiff/: GNUmakefile  README
lightcrafts/jnisrc/tiff/libtiff/tiff-3.8.2/libtiff/: tif_dirinfo.c  tiff.h
lightcrafts/jnisrc/tiff/libtiff/tiff-4.0.3/libtiff/: tif_dirinfo.c  tiff.h
lightcrafts/jnisrc/tiff/zlib/: GNUmakefile
lightcrafts/jnisrc/tiff/zlib/zlib-1.2.3/: Makefile.in
linux/: BUILD-Linux.md  BUILD-Ubuntu.md  PKGBUILD  build.gradle.kts  build.xml  fedora.patch  lightzone-9999.ebuild  lightzone.SlackBuild  lightzone.changes  lightzone.install4j  lightzone.spec
macosx/: BUILD-macosx.md  apple.xml  build.gradle.kts  build.xml  copydylibs.sh  oracle.xml  (+1 more)
(+4726 files in other folders)
