[package]
name = "rawler_jni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.20.0"
log = "0.4.14"
multiversion = "0.7.1"
rayon = "1.6.1"
rawler = { git = "https://github.com/dnglab/dnglab.git" }

[lib]
crate-type = ["cdylib"]